# elm-generate-readme

./: LICENSE  README.md  elm-generate-readme.cabal  fourmolu.yaml
app/: Main.hs
test/: README.md  Readme.elm
