cabal-version:      2.4
name:               elm-generate-readme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Enrico Scherlies
maintainer:         e.scherlies@pm.me

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable elm-generate-readme
  hs-source-dirs:   
    app
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  ghc-options:
    -Wall 
    -Wcompat 
    -Widentities 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wmissing-home-modules 
    -Wpartial-fields 
    -Wredundant-constraints 
    -threaded 
    -rtsopts 
    -with-rtsopts=-N
  default-extensions:
      OverloadedStrings
  build-depends:    
      base ^>=4.16.3.0
    , process
    , text
    , ghc
  default-language: Haskell2010
